--- a/Protokoll/phasendiagramme.tex
+++ b/Protokoll/phasendiagramme.tex
@@ -1,7 +1,6 @@
 \documentclass[aps,twocolumn,secnumarabic,nobalancelastpage,amsmath,amssymb,
 nofootinbib,superscriptaddress]{revtex4-1}
 
-
 \usepackage{graphics}       % standard graphics specifications
 \usepackage{graphicx}       % alternative graphics specifications
 \usepackage{longtable}      % helps with long table options
@@ -30,7 +29,7 @@ und $\text{DyTbScO}_3$\\im Bereich zwischen 300 K und 2500 K}
 \begin{abstract}
 Mischkristalle aus Skandat ($\text{ScO}_3$) und einem seltenen Erdelement (RE), auch $\text{REScO}_3$ bzw. RE-Skandate, finden heutzutage häufig Anwendung bei der Herstellung
 dünner Perowskit-Filme. Dies ist der Tatsache geschuldet, dass $\text{REScO}_3$ Gitterparameter im Bereich von 3.95 \AA$\text{ bis}$ 4.02 \AA$\text{ aufweisen.}$
-Untersucht wird das Temperaturverhalten der Mischkristalle $\text{TbGdScO}_3$ und $\text{DyTbScO}_3$ mittels
+ Untersucht wird das Temperaturverhalten der Mischkristalle $\text{TbGdScO}_3$ und $\text{DyTbScO}_3$ mittels
 Differentialthermoanalyse zur näherungsweisen Bestimmung der Schmelzwärmen ($\Delta Q_S=20\text{ }\%$) sowie Schmelztemperaturen ($\Delta T_S=20\text{ K}$).
 Die genannten Verbindungen werden anschließend in die Systematik der Mischbarkeit von Phasen eingeordnet (XXXXXXXX ES HANDELT SICH UM ... SYSTEM).
 Basierend auf Referenzdaten zu $\text{Gd}\text{ScO}_3$ und $\text{Dy}\text{ScO}_3$ aus \cite{paperK} werden die Schmelzwärmen und -temperaturen dieser
@@ -76,26 +75,26 @@ Thermoelemente kann diese Differenzspannung/-temperatur (Größenordnung 20 $\te
 der Probensubstanz, wie Schmeltemperatur und -wärme (Peakfläche) bestimmt werden.
 
 
-
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{figure}[t]
   \centering
-  \includegraphics[width=0.48\textwidth]{../img/Messkurven_unsere.png}
+   \includegraphics[width=0.48\textwidth]{../img/Messkurven_unsere.png}
   \caption{\label{fig:dtaDyTb+TbGd} DTA von $\text{Al}_{2}\text{O}_3$ (grün), $\text{Dy}_{0.5}\text{Tb}_{0.5}\text{ScO}_3$ (rot)
-  und $\text{Tb}_{0.5}\text{Gd}_{0.5}\text{ScO}_3$ (blau)}
+  und $\text{Tb}_{0.5}\text{Gd}_{0.5}\text{ScO}_3$ (blau); unkorrigierte Temperaturskala ($\text{T}_{korr}=T + 198\text{ °C}$)}
 \end{figure}
 
 \section{Experiment}
-\noindent Die Messung wird im Institut für Kristallzüchtung mit der DTA-Messaparatur \texttt{STA 429} von der Firma \texttt{NETZSCH} durchgeführt. Die Steuerungssoftware
+\noindent Die Messung wird im Leibniz-Institut für Kristallzüchtung (IKZ) mit der DTA-Messaparatur \texttt{STA 429} von der Firma \texttt{NETZSCH} durchgeführt. Die Steuerungssoftware
 \texttt{Measurement Program STA 409 CD (Netzsch)} übernimmt neben dem Evakuieren des Ofens das zeitlineare Heizen (Heizrate 15 K/min) und die Aufnahme der zeitabhängigen Differenzthermospannung.
 Damit keine Oxidation der Proben stattfindet, finden alle Messungen unter He-Atmosphäre statt. Die Schmelztiegel bestehen aufgrund der hohen
 Temperaturbeständigkeit aus reinem Wolfram. Das Thermoelement setzt sich aus Wolfram und Rhenium (Schmelzpunkte 3.422 °C und 3.186 °C) zusammen.
 Untersucht werden 62,85 mg $\text{Dy}_{0.5}\text{Tb}_{0.5}\text{ScO}_3$ und 72,75 mg $\text{Tb}_{0.5}\text{Gd}_{0.5}\text{ScO}_3$, wobei die Differenzspannung jeweils
-einmal im Temperaturbereich zwischen 24 °C und 2050 °C und ein weiteres mal im Bereich zwischen 500 °C und 2050 °C gemessen wird. Eine weitere DTA
-mit $\text{Al}_2\text{O}_3$, dessen Schmelzpunkt und -wärme bekannt ist ($T_S=2054\text{ °C}$, $Q_S=118.4\text{ kJ/mol}$), gewährleistet die Kalibrierung der gemessenen Temperatur.
+einmal im Temperaturbereich zwischen 24 °C und 2200 °C und ein weiteres mal im Bereich zwischen 500 °C und 2200 °C gemessen wird. Eine weitere DTA
+mit $\text{Al}_2\text{O}_3$, dessen Schmelzpunkt und -wärme bekannt ist ($T_S=2054\text{ °C}$, $Q_S=118.4\text{ kJ/mol}$), gewährleistet die Kalibrierung der gemessenen Temperatur
+und der Wärmemenge (integrierte DTA-Peaks).
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -103,14 +102,14 @@ mit $\text{Al}_2\text{O}_3$, dessen Schmelzpunkt und -wärme bekannt ist ($T_S=2
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{Daten und Analyse}
-\noindent Mithilfe der Analysesoftware \texttt{Proteus Thermal Analysis} lässt sich die auf die jeweilige Probenmasse normierte, temperaturabhängige Differenzspannung in
-Abhängigkeit von der Temperatur darstellen. Außerdem wird die Schmelzwärme (Peakfläche) und der Schmelzpunkt durch die Onset-Temperatur (Schnittpunkt Wendetangente mit Basislinie) \cite{versuchsbeschr}
-berechnet. Die temperaturabhängigen DTA-Messkurven für $\text{Dy}_{0.5}\text{Tb}_{0.5}\text{ScO}_3$, $\text{Tb}_{0.5}\text{Gd}_{0.5}\text{ScO}_3$ und $\text{Al}_{2}\text{O}_3$ sind in Abb. \ref{fig:exp} dargestellt.
+\noindent Mithilfe der Analysesoftware \texttt{Proteus Thermal Analysis} lässt sich die auf die jeweilige Probenmasse normierte Differenzspannung in
+Abhängigkeit von der Temperatur darstellen. Außerdem wird der Schmelzpunkt durch die Onset-Temperatur (Schnittpunkt Wendetangente mit Basislinie) \cite{versuchsbeschr} und die Schmelzwärme (Peakfläche)
+berechnet. Die temperaturabhängigen DTA-Messkurven für $\text{Dy}_{0.5}\text{Tb}_{0.5}\text{ScO}_3$, $\text{Tb}_{0.5}\text{Gd}_{0.5}\text{ScO}_3$ und $\text{Al}_{2}\text{O}_3$ sind in Abb. \ref{fig:dtaDyTb+TbGd} dargestellt.
 
+Zunächst sind bei allen Substanzen Phasenübergänge zu erkennen. Auffällig ist, dass bei jeder zweiten Messung die Onset-Temperatur systematisch hin zu kleineren Temperaturen verschoben ist (Größenordnung 20-25 °C).
+Dies wurde auch bei früheren Messungen, jedoch mit geringerer Abweichung (ca. 10 °C) an $\text{GdScO}_3$ und $\text{DyScO}_3$ festgestellt.
 
-
-
-\noindent Da pro Substanz nur zwei Messwerte für Schmelzpunkt und -wärme vorliegen, werden die Unsicherheiten mit $\Delta T_S=20\text{ K}$ und $\Delta Q_S=0,2\cdot Q_S$ abgeschätzt.
+Da pro Substanz nur zwei Messwerte für Schmelzpunkt und -wärme vorliegen ($\text{Al}_2\text{O}_3$ nur eine Messung), werden die Unsicherheiten mit $\Delta T_S=20\text{ K}$ und $\Delta Q_S=0,2\cdot Q_S$ abgeschätzt.
 Die Peakflächen wurden aufgrund unterschiedlicher molarer Massen zunächst von µVs/mg in µVs/mol umgerechnet und dann zur bekannten Schmelzwärme von $\text{Al}_2\text{O}_3$ ins Verhältnis gesetzt.
 
 Es ergeben sich folgende Werte:
@@ -123,9 +122,22 @@ Es ergeben sich folgende Werte:
   \label{eq:XXX}
 \end{eqnarray}
 
-TEXTTEXTTE XTTEXTTEXTT EXTTEXTTEXTTEXTTEXTT EXTTEXTTEXTTEX TTEXT TEXTTE XTT EXTTEXTT EXTTEXT TEXTTEXT TEXTTEXTTEXT TEXTTEXTTEXTTEXTT XTTEXT
-TEXTTEX TTEXTTEXTTEXTTEXTTEXTT EXTT EXTTEXTTEXTT EXT TEXTTEXTTEXTTEXTTE XTTEXTTEXTTEXTTEX TTEXTTEXTTEXTTEX TTEXTTEXTTEX TTEXTTEXTTEXTTEXT
-TEXTTEX TTEXTTEXT TE XTTEXT TEX TTEXTT EX TTEXTTEXTTEXTT EX TTEXTTEXTTEX TTEXTTEXTTE X TTEXTT EXTTEXTTEX TTEXTTEXTTEXTTEXT TEXTTEXTT EXTTEXTTEXT
+\noindent Zum Vergleich der Ergebnisse sind in Abb. \ref{fig:dtaAll} zusätzlich die DTA-Kurven vorangegangener Messungen von $\text{GdScO}_3$ und $\text{DyScO}_3$ dargestellt.
+Die Daten wurden von Herrn Dr. D. Klimm vom IKZ bereitgestellt.
+
+\begin{figure}[h]
+  \centering
+   \includegraphics[width=0.48\textwidth]{../img/vglSkandate.jpg}
+  \caption{\label{fig:dtaAll} DTA von $\text{GdScO}_3$, $\text{GdTbScO}_3$, $\text{TbDyScO}_3$ und $\text{DyScO}_3$ (v.o.n.u.) }
+\end{figure}
+
+Offensichtlich findet zwischen 2110 °C und 2210 °C bei allen Proben ein Phasenübergang erster Ordnung statt. Sy
+
+\begin{figure}[h]
+  \centering
+   \includegraphics[width=0.48\textwidth]{../img/plotSchmelzwaermen.jpg}
+  \caption{\label{fig:QAll} Schmelzwärmen von $\text{GdScO}_3$, $\text{GdTbScO}_3$, $\text{TbDyScO}_3$ und $\text{DyScO}_3$ (v.l.n.r.) }
+\end{figure}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -133,13 +145,7 @@ TEXTTEX TTEXTTEXT TE XTTEXT TEX TTEXTT EX TTEXTTEXTTEXTT EX TTEXTTEXTTEX TTEXTTE
 
 \section{Schlussfolgerungen}
 
-\noindent Es wurde das Lumineszenzspektrum einer InGaP/GaAs-Photodiode untersucht. Die charakteristische Temperaturabhängigkeit der
-Bandlücke, sowie der Peakintensitäten und integrierten Peakintensitäten konnte bestätigt werden. Mittels Vergleich des theoretischen
-und experimentellen Temperaturverhaltens der Bandlücke wurde eine Aussage über die Zusammensetzung des Ga$_x$In$_{1-x}$P getroffen
-($x>0.51$). Die auf die Lumineszenz bezogene ermittelte Aktivierungsenergie von InGaP liegt im erwarteten Bereich.
-Unreinheiten in der Kristallstruktur wurden während der gesamten Betrachtung quantitativ vernachlässigt. Diese würden zur Bildung
-von Zwischenniveaus in der Bandlücke führen. Die Absorptionskante würde dadurch, je nach Dotierung, nach oben oder unten verschoben werden, was
-zu einer systematischen Abweichung der Bandlücke führen würde.
+\noindent
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
