--- a/Protokoll/phasendiagramme.tex
+++ b/Protokoll/phasendiagramme.tex
@@ -3,13 +3,13 @@ nofootinbib,superscriptaddress]{revtex4-1}
 
 \usepackage{graphics}       % standard graphics specifications
 \usepackage{graphicx}       % alternative graphics specifications
+\usepackage{rotating}       % for sidewaysfigure
 \usepackage{longtable}      % helps with long table options
 \usepackage{url}            % for on-line citations
 \usepackage{bm}             % special 'bold-math' package
 \usepackage[ngerman]{babel} % deutsche Siblentrennung
 \usepackage[utf8]{inputenc} % Umlaute
 \usepackage{chemformula}    % für chemische Schreibweise
-\usepackage{lipsum}
 
 \def\andname{\hspace*{-0.5em},} % definiert die Trennung zwischen 2 Autoren neu
 
@@ -17,10 +17,10 @@ nofootinbib,superscriptaddress]{revtex4-1}
 \begin{document}
 \title{F-Praktikum (Phasendiagramme):\\Differentialthermoanalyse von $\text{TbGdScO}_3$
 und $\text{DyTbScO}_3$\\im Bereich zwischen 300 K und 2500 K}
-\author         {Ch. Egerland}
-\email[Email: ]{egerlanc@physik.hu-berlin.de}
 \author         {M. Pfeifer}
 \email[Email: ]{max.pfeifer@physik.hu-berlin.de}
+\author         {Ch. Egerland}
+\email[Email: ]{egerlanc@physik.hu-berlin.de}
 \affiliation    {Humboldt-Universität zu Berlin, Institut für Physik}
 \date[Versuchsort: ]{Leibniz-Institut für Kristallzüchtung \\ VVVersuchsdatum: 05.09.2017}
 
@@ -30,10 +30,11 @@ und $\text{DyTbScO}_3$\\im Bereich zwischen 300 K und 2500 K}
 Mischkristalle aus Skandat ($\text{ScO}_3$) und einem seltenen Erdelement (RE), auch $\text{REScO}_3$ bzw. RE-Skandate, finden heutzutage häufig Anwendung bei der Herstellung
 dünner Perowskit-Filme. Dies ist der Tatsache geschuldet, dass $\text{REScO}_3$ Gitterparameter im Bereich von 3.95 \AA$\text{ bis}$ 4.02 \AA$\text{ aufweisen.}$
  Untersucht wird das Temperaturverhalten der Mischkristalle $\text{TbGdScO}_3$ und $\text{DyTbScO}_3$ mittels
-Differentialthermoanalyse zur näherungsweisen Bestimmung der Schmelzwärmen ($\Delta Q_S=20\text{ }\%$) sowie Schmelztemperaturen ($\Delta T_S=20\text{ K}$).
-Die genannten Verbindungen werden anschließend in die Systematik der Mischbarkeit von Phasen eingeordnet (XXXXXXXX ES HANDELT SICH UM ... SYSTEM).
+Differentialthermoanalyse zur näherungsweisen Bestimmung der Schmelzwärmen sowie Schmelztemperaturen.
 Basierend auf Referenzdaten zu $\text{Gd}\text{ScO}_3$ und $\text{Dy}\text{ScO}_3$ aus \cite{paperK} werden die Schmelzwärmen und -temperaturen dieser
-reinen RE-Skandate mit denen der hier untersuchten Materialien verglichen.
+reinen RE-Skandate mit denen der hier untersuchten Materialien verglichen. Es wird angenommen, dass bei den untersuchten Materialien eine ideale Mischbarkeit in fester und
+flüssiger Phase vorliegt.
+
 \end{abstract}
 
 
@@ -45,22 +46,21 @@ reinen RE-Skandate mit denen der hier untersuchten Materialien verglichen.
 
 \section{Theorie}
 \subsection{Struktur und Eigenschaften von $\text{REScO}_3$}
-\noindent Skandate spielen in der Forschung wegen ihrer speziellen Kristallstruktur und aufgrund der Anpassbarkeit bestimmter Gittereigenschaften, wie z.B. der
-Gitterparameter, eine entscheidene Rolle. $\text{REScO}_3$ mit $\text{RE=Pr, Nd, Pm, Sm, Eu, Gd, Tb, Dy}$, sowie $\text{NdSmScO}_3$ und $\text{SmGdScO}_3$ wurden bereits untersucht \cite{paperK}.
-Dabei fällt der Gitterparameter des Mischkristalls mit steigender Ordnungszahl des RE-Elements näherungsweise in 0.01 \AA-Schritten. \cite{paperK}
+\noindent Skandate spielen in der Forschung wegen ihrer speziellen Kristallstruktur und aufgrund der Anpassbarkeit bestimmter Materialeigenschaften, wie z.B. der
+Gitterparameter oder Schmelztemperaturen, eine entscheidene Rolle. $\text{REScO}_3$ mit $\text{RE=Pr, Nd, Pm, Sm, Eu, Gd, Tb, Dy}$, sowie $\text{NdSmScO}_3$ und $\text{SmGdScO}_3$ wurden bereits untersucht.
+Der Gitterparameter dieser Mischkristalle fällt mit steigender Ordnungszahl des RE-Elements näherungsweise in 0.01 \AA-Schritten. \cite{paperK}
 
-Jedoch sind nicht alle seltenen Erden als Bestandteil von RE-Skandaten geeignet ($\text{PmScO}_3$ radioaktiv, $\text{EuScO}_3$ instabil bei Kontakt mit Si).
+Es sind jedoch nicht alle seltenen Erden als Bestandteil von RE-Skandaten geeignet ($\text{PmScO}_3$ radioaktiv, $\text{EuScO}_3$ instabil bei Kontakt mit Si).
 Weiterhin kristallisieren nicht alle RE-Skandate in der Perowskit-Struktur. Nach \cite{perowskHoPr} kann jedoch davon ausgegangen werden, dass solche $\text{REScO}_3$ mit
 $\text{RE}=\ch{_{57}Pr}$ bis $\ch{_{67}Ho}$ isomorph sind. Im Gegensatz zur idealerweise kubischen Perowskitstruktur, besitzen diese eine orthorhombische Kristallstruktur.
 
 Um die als Kristallbestandteil ungeeigneten Lanthanoide zu ersetzen, werden auf Grundlage der Vergardschen Regel Mischkristalle aus jeweils benachbarten RE-Skandaten gezüchtet so z.B.
 $\text{Sm}_x\text{Gd}_{1-x}\text{ScO}_3$ für $\text{EuScO}_3$ oder $\text{Nd}_x\text{Sm}_{1-x}\text{ScO}_3$ für $\text{PmScO}_3$ \cite{paperK}. Werden Mischkristalle gezüchtet,
 die neben $\text{ScO}_3$ zwei direkt benachbarte seltene Erdelemente enthalten ($\ch{^{x}RE^{y}REScO_3}$, wobei $|x-y|=2$) ist eine gezieltere Feinabstimmung gewünschter
-Film-Eigenschaften (z.B. Anpassung Gitterparameter in der Größenordnung von 0.002 \AA$\text{ statt }$ 0.01 \AA$\text{ mit}$ reinen RE-Skandaten) möglich. Dazu werden in diesem Versuch
-die Verbindungen $\text{Tb}_{0.5}\text{Gd}_{0.5}\text{ScO}_3$ und $\text{Dy}_{0.5}\text{Tb}_{0.5}\text{ScO}_3$ mittels Differentialthermoanalyse untersucht.
+Film-Eigenschaften, wie z.B. die Anpassung des Gitterparameters in der Größenordnung von 0.002 \AA$\text{ statt }$ 0.01 \AA$\text{ mit}$ reinen RE-Skandaten, möglich.
 
 \subsection{Differentialthermoanalyse (DTA)}
-\begin{figure}[b]
+\begin{figure}[t]
   \centering
   \includegraphics[width=0.48\textwidth]{../img/exp.jpg}
   \caption{\label{fig:exp} Prinzip der Differentialthermoanalyse. \textbf{R} - Referenz, \textbf{P} - Probe, \textbf{O} - Ofen. Aus \cite{versuchsbeschr}}
@@ -83,7 +83,7 @@ der Probensubstanz, wie Schmeltemperatur und -wärme (Peakfläche) bestimmt werd
   \centering
    \includegraphics[width=0.48\textwidth]{../img/Messkurven_unsere.png}
   \caption{\label{fig:dtaDyTb+TbGd} DTA von $\text{Al}_{2}\text{O}_3$ (grün), $\text{Dy}_{0.5}\text{Tb}_{0.5}\text{ScO}_3$ (rot)
-  und $\text{Tb}_{0.5}\text{Gd}_{0.5}\text{ScO}_3$ (blau); unkorrigierte Temperaturskala ($\text{T}_{korr}=T + 198\text{ °C}$)}
+  und $\text{Gd}_{0.5}\text{Tb}_{0.5}\text{ScO}_3$ (blau); unkorrigierte Temperaturskala ($\text{T}_{korr}=T + 198\text{ °C}$); vergrößert auf S. \ref{fig:dtaAllGross}}
 \end{figure}
 
 \section{Experiment}
@@ -92,7 +92,7 @@ der Probensubstanz, wie Schmeltemperatur und -wärme (Peakfläche) bestimmt werd
 Damit keine Oxidation der Proben stattfindet, finden alle Messungen unter He-Atmosphäre statt. Die Schmelztiegel bestehen aufgrund der hohen
 Temperaturbeständigkeit aus reinem Wolfram. Das Thermoelement setzt sich aus Wolfram und Rhenium (Schmelzpunkte 3.422 °C und 3.186 °C) zusammen.
 Untersucht werden 62,85 mg $\text{Dy}_{0.5}\text{Tb}_{0.5}\text{ScO}_3$ und 72,75 mg $\text{Tb}_{0.5}\text{Gd}_{0.5}\text{ScO}_3$, wobei die Differenzspannung jeweils
-einmal im Temperaturbereich zwischen 24 °C und 2200 °C und ein weiteres mal im Bereich zwischen 500 °C und 2200 °C gemessen wird. Eine weitere DTA
+einmal im Temperaturbereich zwischen 24 °C und 2200 °C (Heizvorgang) und ein weiteres mal im Bereich zwischen 500 °C und 2200 °C (Abkühlvorgang) gemessen wird. Eine weitere DTA
 mit $\text{Al}_2\text{O}_3$, dessen Schmelzpunkt und -wärme bekannt ist ($T_S=2054\text{ °C}$, $Q_S=118.4\text{ kJ/mol}$), gewährleistet die Kalibrierung der gemessenen Temperatur
 und der Wärmemenge (integrierte DTA-Peaks).
 
@@ -105,14 +105,30 @@ und der Wärmemenge (integrierte DTA-Peaks).
 \noindent Mithilfe der Analysesoftware \texttt{Proteus Thermal Analysis} lässt sich die auf die jeweilige Probenmasse normierte Differenzspannung in
 Abhängigkeit von der Temperatur darstellen. Außerdem wird der Schmelzpunkt durch die Onset-Temperatur (Schnittpunkt Wendetangente mit Basislinie) \cite{versuchsbeschr} und die Schmelzwärme (Peakfläche)
 berechnet. Die temperaturabhängigen DTA-Messkurven für $\text{Dy}_{0.5}\text{Tb}_{0.5}\text{ScO}_3$, $\text{Tb}_{0.5}\text{Gd}_{0.5}\text{ScO}_3$ und $\text{Al}_{2}\text{O}_3$ sind in Abb. \ref{fig:dtaDyTb+TbGd} dargestellt.
+\newline\newline Zunächst sind bei allen Substanzen Phasenübergänge zu erkennen. Auffällig ist, dass bei jeder zweiten Messung die Onset-Temperatur systematisch hin zu kleineren Temperaturen verschoben ist (Größenordnung 20-25 °C).
+Dies wurde auch bei früheren Messungen, jedoch mit geringerer Abweichung (ca. 10 °C) an $\text{GdScO}_3$ und $\text{DyScO}_3$ festgestellt (s. Abb. \ref{fig:dtaAll}) und deutet auf die Existenz einer Zweiphasenregion (\texttt{liq+sol}) im Phasendiagramm hin.
 
-Zunächst sind bei allen Substanzen Phasenübergänge zu erkennen. Auffällig ist, dass bei jeder zweiten Messung die Onset-Temperatur systematisch hin zu kleineren Temperaturen verschoben ist (Größenordnung 20-25 °C).
-Dies wurde auch bei früheren Messungen, jedoch mit geringerer Abweichung (ca. 10 °C) an $\text{GdScO}_3$ und $\text{DyScO}_3$ festgestellt.
-
-Da pro Substanz nur zwei Messwerte für Schmelzpunkt und -wärme vorliegen ($\text{Al}_2\text{O}_3$ nur eine Messung), werden die Unsicherheiten mit $\Delta T_S=20\text{ K}$ und $\Delta Q_S=0,2\cdot Q_S$ abgeschätzt.
-Die Peakflächen wurden aufgrund unterschiedlicher molarer Massen zunächst von µVs/mg in µVs/mol umgerechnet und dann zur bekannten Schmelzwärme von $\text{Al}_2\text{O}_3$ ins Verhältnis gesetzt.
+Da pro Substanz nur zwei Messwerte für Schmelzpunkt und -wärme vorliegen ($\text{Al}_2\text{O}_3$ ein Messwert), werden die Unsicherheiten mit $\Delta T_S=20\text{ K}$ und $\Delta Q_S=0,2\cdot Q_S$ abgeschätzt.
+Die Peakflächen wurden aufgrund unterschiedlicher molarer Massen zunächst von µVs/mg in µVs/mol umgerechnet und dann zur bekannten Schmelzwärme von $\text{Al}_2\text{O}_3$ ($118.4\text{ kJ/mol}$ \cite{schmelzwAl2O3}) ins Verhältnis gesetzt.
 
 Es ergeben sich folgende Werte:
+
+\begin{table}[h]
+\begin{ruledtabular}
+\begin{tabular}{ccccc}
+ Substanz & $T_S$ (°C) & $T_{S,ref}$ (°C) & $Q_S$ (kJ/mol) & $Q_{S,ref}$ (kJ/mol)\\
+\hline
+  \textbf{$\text{TbGdScO}_3$}  & \textbf{2149} & -    & \textbf{142} & -  \\
+  $\text{GdScO}_3$    & 2141 & 2150 \cite{paperK} & 83  & 85 \\
+  \textbf{$\text{DyTbScO}_3$}  & \textbf{2114} & -    & \textbf{163} & -  \\
+  $\text{DyScO}_3$    & 2185 & 2060 \cite{meltpDyScO3} & 98  & - \\
+\end{tabular}
+\end{ruledtabular}
+\caption{\label{tab:erg} Messergebnisse für Schmelztemperatur $T_S$ und -wärme $Q_S$ der verschiedenen Mischkristalle. Fett markiert ist die Messreihe dieses Versuchs.
+Alle anderen Messungen sind vom 17.06.2010 und dienen dem Vergleich. Unsicherheiten: $\Delta T_S=20\text{ K}$, $\Delta Q_S=0,2\cdot Q_S$ }
+\end{table}
+
+\iffalse
 \begin{eqnarray}
   \text{TbGdScO}_3:\;\;\;\;\; T_S = (2149\,\pm\, 20)\text{ °C}\;\:\,\;\;\;\;\;\:\: \nonumber \\
   Q_S = (142\,\pm\, 28)\text{ kJ/mol}            \;\;\;             \nonumber \\
@@ -121,22 +137,32 @@ Es ergeben sich folgende Werte:
   Q_S = (163\,\pm\, 33)\text{ kJ/mol}                     \;\;\;             \nonumber
   \label{eq:XXX}
 \end{eqnarray}
-
-\noindent Zum Vergleich der Ergebnisse sind in Abb. \ref{fig:dtaAll} zusätzlich die DTA-Kurven vorangegangener Messungen von $\text{GdScO}_3$ und $\text{DyScO}_3$ dargestellt.
-Die Daten wurden von Herrn Dr. D. Klimm vom IKZ bereitgestellt.
+\fi
 
 \begin{figure}[h]
   \centering
-   \includegraphics[width=0.48\textwidth]{../img/vglSkandate.jpg}
-  \caption{\label{fig:dtaAll} DTA von $\text{GdScO}_3$, $\text{GdTbScO}_3$, $\text{TbDyScO}_3$ und $\text{DyScO}_3$ (v.o.n.u.) }
+   \includegraphics[width=0.48\textwidth]{../img/vglSkandate.eps}
+  \caption{\label{fig:dtaAll} DTA von $\text{GdScO}_3$ (rot), $\text{TbGdScO}_3$ (grün), $\text{TbDyScO}_3$ (blau) und $\text{DyScO}_3$ (schwarz); vergrößert auf S. \ref{fig:dtaAllGross}}
 \end{figure}
 
-Offensichtlich findet zwischen 2110 °C und 2210 °C bei allen Proben ein Phasenübergang erster Ordnung statt. Sy
+\noindent Zum Vergleich der Ergebnisse sind zusätzlich die DTA-Kurven (Abb. \ref{fig:dtaAll}/Tab.) und Schmelzwärmen (Abb. \ref{fig:QAll}/Tab.) vorangegangener Messungen (17.06.2010) an $\text{GdScO}_3$ und $\text{DyScO}_3$ dargestellt (\texttt{MATLAB}).
+Die Daten wurden von Herrn Dr. D. Klimm vom IKZ bereitgestellt. Diese sind ebenfalls um die Differenz zwischen gemessener Schmelztemperatur von $\text{Al}_{2}\text{O}_3$ und dem Referenzwert
+korrigiert.
+\noindent Offensichtlich findet zwischen etwa 2100 °C und 2200 °C bei allen Proben ein diskontinuierlicher Phasenübergang statt. Die geringe
+Streuung der jeweilig gemessenen Schmelztemperaturen (ähnliche Werte für Aufheiz- und Abkühlphase) und ähnliches Verhalten von $\text{DyScO}_3$ und $\text{GdScO}_3$
+bei früheren Messungen, sowie Untersuchungen zu den konzentrationsabhängigen Schmelzpunkten von ähnlichen RE-Skandaten deuten darauf hin, dass die Annahme der idealen Mischbarkeit in
+beiden Phasen gerechtfertigt ist. Daher ist davon auszugehen, dass die Zweiphasenregion (\texttt{liq+sol}) im Phasendiagramm, insbesondere bei $\text{DyTbScO}_3$, schmal ist.
+Außerdem ist im Phasendiagramm von $\text{DyTbScO}_3$ ein monotoner Verlauf der Solidus/Liquidus-Kurven zu erahnen (Schmelzpunkt zwischen jenen von $\text{DyScO}_3$ und $\text{TbScO}_3$).
+Dabei weicht die aus den früheren Messungen stammende Schmelztemperatur von $\text{DyScO}_3$ mit $(2185\;\pm\;20)\text{ °C}$ erheblich vom Referenzwert ($2060\text{ °C}$ \cite{meltpDyScO3}) ab,
+wohingegen der Wert $T_S=(2141\;\pm\; 20)\text{ °C}$ bei der Messung an $\text{GdScO}_3$ sehr gut mit dem Literaturwert ($2150\text{ °C}$ \cite{paperK}) übereinstimmt.
 
-\begin{figure}[h]
+Eine Verunreinigung der Tiegel und/oder der Proben stellt einen systematischen Unsicherheitseinfluss dar, der hier außen vor gelassen wird. Bedingt unberücksichtigt bleibt das Thermische Verdampfen
+der Konstituenten des Thermoelements (W, Re), welches zur Verfälschung der Differenzthermospannung/-temperatur führen kann ("nur"  Korrektur um Konstante).
+
+\begin{figure}[t]
   \centering
-   \includegraphics[width=0.48\textwidth]{../img/plotSchmelzwaermen.jpg}
-  \caption{\label{fig:QAll} Schmelzwärmen von $\text{GdScO}_3$, $\text{GdTbScO}_3$, $\text{TbDyScO}_3$ und $\text{DyScO}_3$ (v.l.n.r.) }
+  \includegraphics[width=0.43\textwidth]{../img/plotSchmelzwaermen.eps}
+  \caption{\label{fig:QAll} Schmelzwärmen von $\text{GdScO}_3$, $\text{TbGdScO}_3$, $\text{TbDyScO}_3$ und $\text{DyScO}_3$ (v.l.n.r.) }
 \end{figure}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -145,10 +171,11 @@ Offensichtlich findet zwischen 2110 °C und 2210 °C bei allen Proben ein Phasen
 
 \section{Schlussfolgerungen}
 
-\noindent
+\noindent Die Mischkristalle $\text{Gd}\text{ScO}_3$ und $\text{Dy}\text{ScO}_3$ wurden mittels DTA erstmals hinsichtlich Schmelzpunkt und -wärme untersucht. Die gemessenen Schmelztemperaturen liegen im erwarteten Bereich zwischen 2100°C und 2200°C und
+sind im Rahmen der Ungenauigkeit mit dem verwendeten Modell der idealen Mischbarkeit von Phasen vereinbar. Diese, auch auf Grundlage älterer Messungen getroffene, Annahme der idealen Mischbarkeit von $\text{TbGdScO}_3$ und $\text{DyTbScO}_3$ in der
+festen und flüssigen Phase scheint plausibel. Es liegt daher die Vermutung nahe, dass auch die Züchtung anderer $\ch{^{x}RE^{y}REScO_3}$-Mischkristalle zur stetigen Anpassung der Gitterkonstanten/Schmelztemperaturen möglich ist.
+Eine Variation der Zusammensetzung der untersuchten Substrate (z.B. $\text{Dy}_{x}\text{Tb}_{1-x}\text{ScO}_3$) würde genauere Aussagen zur idealen Mischbarkeit, sowie zu den konzentrationsabhängigen Schmelzpunkten und -wärmen ermöglichen.
 
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -159,15 +186,29 @@ Offensichtlich findet zwischen 2110 °C und 2210 °C bei allen Proben ein Phasen
 \bibitem{versuchsbeschr}Versuchsbeschreibung F-Praktikumsversuch "Phasendiagramme", Dr. D. Klimm, Leibniz-Institut für Kristallzüchtung [2016]
 \bibitem{meltpDyScO3}Crnogorac, H. Wilke, Measurement of physical properties of DyScO3 melt, Vol. 44, I 6 [2009]
 \bibitem{meltpDyGdScO3}B. Velickov, V. Kahlenberg, R. Bertram, M. Bernhagen, Z. Kristallogr. 222, p 466-473 [2007]
-\bibitem{schmelzwAl2O3}Zhang, P.H., Chang, R.Z., Wei, Z. et al., Int J Thermophys 7: 811. [1986]
-\bibitem{schmelzwAl2O3_2}Dale L. Perry, Sidney L. Phillips, Inorganic Compounds, CRC Press, p 10 [1995]
+\bibitem{schmelzwAl2O3}Zhang, P.H., Chang, R.Z., Wei, Z. et al., Int J Thermophys 7: 811 [1986]
 \bibitem{perowskHoPr}V.M. Goldschmidt, Naturwissenschaften 14, 477 [1926]
 \end{thebibliography}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\clearpage
 \appendix
+\section{DTA-Messungen}
+
+\begin{sidewaysfigure}
+  \centering
+  \includegraphics[width=0.5\textwidth]{../img/Messungen_ComplexPeaks.png}
+  \caption{\label{fig:dtaDyTb+TbGd_Gross} DTA von $\text{Al}_{2}\text{O}_3$ (grün), $\text{Dy}_{0.5}\text{Tb}_{0.5}\text{ScO}_3$ (rot)
+  und $\text{Gd}_{0.5}\text{Tb}_{0.5}\text{ScO}_3$ (blau); unkorrigierte Temperaturskala ($\text{T}_{korr}=T + 198\text{ °C}$)}
+\end{sidewaysfigure}
+
+\begin{sidewaysfigure}[h]
+  \centering
+   \includegraphics[width=0.5\textwidth]{../img/vglSkandate.jpg}
+  \caption{\label{fig:dtaAllGross} DTA von $\text{GdScO}_3$ (rot), $\text{TbGdScO}_3$ (grün), $\text{TbDyScO}_3$ (blau) und $\text{DyScO}_3$ (schwarz)}
+\end{sidewaysfigure}
+
+\newpage
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
