--- a/Protokoll/phasendiagramme.tex
+++ b/Protokoll/phasendiagramme.tex
@@ -83,7 +83,7 @@ der Probensubstanz, wie Schmeltemperatur und -wärme (Peakfläche) bestimmt werd
   \centering
    \includegraphics[width=0.48\textwidth]{../img/Messkurven_unsere.png}
   \caption{\label{fig:dtaDyTb+TbGd} DTA von $\text{Al}_{2}\text{O}_3$ (grün), $\text{Dy}_{0.5}\text{Tb}_{0.5}\text{ScO}_3$ (rot)
-  und $\text{Gd}_{0.5}\text{Tb}_{0.5}\text{ScO}_3$ (blau); unkorrigierte Temperaturskala ($\text{T}_{korr}=T + 198\text{ °C}$); vergrößert auf S. \ref{fig:dtaAllGross}}
+  und $\text{Gd}_{0.5}\text{Tb}_{0.5}\text{ScO}_3$ (blau); unkorrigierte Temperaturskala ($\text{T}_{korr}=T + 198\text{ °C}$); vergrößert auf S. 4}
 \end{figure}
 
 \section{Experiment}
@@ -142,7 +142,7 @@ Alle anderen Messungen sind vom 17.06.2010 und dienen dem Vergleich. Unsicherhei
 \begin{figure}[h]
   \centering
    \includegraphics[width=0.48\textwidth]{../img/vglSkandate.eps}
-  \caption{\label{fig:dtaAll} DTA von $\text{GdScO}_3$ (rot), $\text{TbGdScO}_3$ (grün), $\text{TbDyScO}_3$ (blau) und $\text{DyScO}_3$ (schwarz); vergrößert auf S. \ref{fig:dtaAllGross}}
+  \caption{\label{fig:dtaAll} DTA von $\text{GdScO}_3$ (rot), $\text{TbGdScO}_3$ (grün), $\text{TbDyScO}_3$ (blau) und $\text{DyScO}_3$ (schwarz); vergrößert auf S. 4}
 \end{figure}
 
 \noindent Zum Vergleich der Ergebnisse sind zusätzlich die DTA-Kurven (Abb. \ref{fig:dtaAll}/Tab.) und Schmelzwärmen (Abb. \ref{fig:QAll}/Tab.) vorangegangener Messungen (17.06.2010) an $\text{GdScO}_3$ und $\text{DyScO}_3$ dargestellt (\texttt{MATLAB}).
@@ -192,9 +192,6 @@ Eine Variation der Zusammensetzung der untersuchten Substrate (z.B. $\text{Dy}_{
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\appendix
-\section{DTA-Messungen}
-
 \begin{sidewaysfigure}
   \centering
   \includegraphics[width=0.5\textwidth]{../img/Messungen_ComplexPeaks.png}
@@ -209,6 +206,7 @@ Eine Variation der Zusammensetzung der untersuchten Substrate (z.B. $\text{Dy}_{
 \end{sidewaysfigure}
 
 \newpage
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
