final patch (wirklich)

--- a/Protokoll/phasendiagramme.tex
+++ b/Protokoll/phasendiagramme.tex
@@ -16,7 +16,7 @@ nofootinbib,superscriptaddress]{revtex4-1}
 % Titelseite
 \begin{document}
 \title{F-Praktikum (Phasendiagramme):\\Differentialthermoanalyse von $\text{TbGdScO}_3$
-und $\text{DyTbScO}_3$\\im Bereich zwischen 300 K und 2500 K}
+und $\text{DyTbScO}_3$\\im Bereich zwischen 30 °C und 2200 °C}
 \author         {M. Pfeifer}
 \email[Email: ]{max.pfeifer@physik.hu-berlin.de}
 \author         {Ch. Egerland}
@@ -45,7 +45,7 @@ flüssiger Phase vorliegt.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{Theorie}
-\subsection{Struktur und Eigenschaften von $\text{REScO}_3$}
+\subsection{Eigenschaften/Struktur von $\text{REScO}_3$}
 \noindent Skandate spielen in der Forschung wegen ihrer speziellen Kristallstruktur und aufgrund der Anpassbarkeit bestimmter Materialeigenschaften, wie z.B. der
 Gitterparameter oder Schmelztemperaturen, eine entscheidene Rolle. $\text{REScO}_3$ mit $\text{RE=Pr, Nd, Pm, Sm, Eu, Gd, Tb, Dy}$, sowie $\text{NdSmScO}_3$ und $\text{SmGdScO}_3$ wurden bereits untersucht.
 Der Gitterparameter dieser Mischkristalle fällt mit steigender Ordnungszahl des RE-Elements näherungsweise in 0.01 \AA-Schritten. \cite{paperK}
@@ -105,7 +105,7 @@ und der Wärmemenge (integrierte DTA-Peaks).
 \noindent Mithilfe der Analysesoftware \texttt{Proteus Thermal Analysis} lässt sich die auf die jeweilige Probenmasse normierte Differenzspannung in
 Abhängigkeit von der Temperatur darstellen. Außerdem wird der Schmelzpunkt durch die Onset-Temperatur (Schnittpunkt Wendetangente mit Basislinie) \cite{versuchsbeschr} und die Schmelzwärme (Peakfläche)
 berechnet. Die temperaturabhängigen DTA-Messkurven für $\text{Dy}_{0.5}\text{Tb}_{0.5}\text{ScO}_3$, $\text{Tb}_{0.5}\text{Gd}_{0.5}\text{ScO}_3$ und $\text{Al}_{2}\text{O}_3$ sind in Abb. \ref{fig:dtaDyTb+TbGd} dargestellt.
-\newline\newline Zunächst sind bei allen Substanzen Phasenübergänge zu erkennen. Auffällig ist, dass bei jeder zweiten Messung die Onset-Temperatur systematisch hin zu kleineren Temperaturen verschoben ist (Größenordnung 20-25 °C).
+\newline\newline Zunächst sind bei allen Substanzen Phasenübergänge zu erkennen. Auffällig ist, dass bei jedem zweiten Messdurchlauf (Abkühlvorgang) die Onset-Temperatur systematisch hin zu kleineren Temperaturen verschoben ist (Größenordnung 20-25 °C).
 Dies wurde auch bei früheren Messungen, jedoch mit geringerer Abweichung (ca. 10 °C) an $\text{GdScO}_3$ und $\text{DyScO}_3$ festgestellt (s. Abb. \ref{fig:dtaAll}) und deutet auf die Existenz einer Zweiphasenregion (\texttt{liq+sol}) im Phasendiagramm hin.
 
 Da pro Substanz nur zwei Messwerte für Schmelzpunkt und -wärme vorliegen ($\text{Al}_2\text{O}_3$ ein Messwert), werden die Unsicherheiten mit $\Delta T_S=20\text{ K}$ und $\Delta Q_S=0,2\cdot Q_S$ abgeschätzt.
@@ -142,16 +142,16 @@ Alle anderen Messungen sind vom 17.06.2010 und dienen dem Vergleich. Unsicherhei
 \begin{figure}[h]
   \centering
    \includegraphics[width=0.48\textwidth]{../img/vglSkandate.eps}
-  \caption{\label{fig:dtaAll} DTA von $\text{GdScO}_3$ (rot), $\text{TbGdScO}_3$ (grün), $\text{TbDyScO}_3$ (blau) und $\text{DyScO}_3$ (schwarz); vergrößert auf S. 4}
+  \caption{\label{fig:dtaAll} DTA von $\text{GdScO}_3$ (rot), $\text{TbGdScO}_3$ (grün), $\text{DyTbScO}_3$ (blau) und $\text{DyScO}_3$ (schwarz); vergrößert auf S. 4}
 \end{figure}
 
 \noindent Zum Vergleich der Ergebnisse sind zusätzlich die DTA-Kurven (Abb. \ref{fig:dtaAll}/Tab.) und Schmelzwärmen (Abb. \ref{fig:QAll}/Tab.) vorangegangener Messungen (17.06.2010) an $\text{GdScO}_3$ und $\text{DyScO}_3$ dargestellt (\texttt{MATLAB}).
 Die Daten wurden von Herrn Dr. D. Klimm vom IKZ bereitgestellt. Diese sind ebenfalls um die Differenz zwischen gemessener Schmelztemperatur von $\text{Al}_{2}\text{O}_3$ und dem Referenzwert
 korrigiert.
-\noindent Offensichtlich findet zwischen etwa 2100 °C und 2200 °C bei allen Proben ein diskontinuierlicher Phasenübergang statt. Die geringe
-Streuung der jeweilig gemessenen Schmelztemperaturen (ähnliche Werte für Aufheiz- und Abkühlphase) und ähnliches Verhalten von $\text{DyScO}_3$ und $\text{GdScO}_3$
-bei früheren Messungen, sowie Untersuchungen zu den konzentrationsabhängigen Schmelzpunkten von ähnlichen RE-Skandaten deuten darauf hin, dass die Annahme der idealen Mischbarkeit in
-beiden Phasen gerechtfertigt ist. Daher ist davon auszugehen, dass die Zweiphasenregion (\texttt{liq+sol}) im Phasendiagramm, insbesondere bei $\text{DyTbScO}_3$, schmal ist.
+\noindent Offensichtlich findet zwischen etwa 2100 °C und 2200 °C bei allen Proben ein diskontinuierlicher Phasenübergang statt. Untersuchungen zu den
+konzentrationsabhängigen Schmelzpunkten von ähnlichen RE-Skandaten deuten darauf hin, dass die Annahme der idealen Mischbarkeit in beiden Phasen (flüssig, fest) gerechtfertigt ist.
+Aufgrund der geringen Streuung der jeweils gemessenen Schmelztemperaturen (ähnliche Werte für Aufheiz- und Abkühlphase) und ähnliches Verhalten von $\text{DyScO}_3$ und $\text{GdScO}_3$
+bei früheren Messungen ist davon auszugehen, dass die Zweiphasenregion (\texttt{liq+sol}) im Phasendiagramm, insbesondere bei $\text{DyTbScO}_3$, schmal ist.
 Außerdem ist im Phasendiagramm von $\text{DyTbScO}_3$ ein monotoner Verlauf der Solidus/Liquidus-Kurven zu erahnen (Schmelzpunkt zwischen jenen von $\text{DyScO}_3$ und $\text{TbScO}_3$).
 Dabei weicht die aus den früheren Messungen stammende Schmelztemperatur von $\text{DyScO}_3$ mit $(2185\;\pm\;20)\text{ °C}$ erheblich vom Referenzwert ($2060\text{ °C}$ \cite{meltpDyScO3}) ab,
 wohingegen der Wert $T_S=(2141\;\pm\; 20)\text{ °C}$ bei der Messung an $\text{GdScO}_3$ sehr gut mit dem Literaturwert ($2150\text{ °C}$ \cite{paperK}) übereinstimmt.
@@ -172,8 +172,9 @@ der Konstituenten des Thermoelements (W, Re), welches zur Verfälschung der Diff
 \section{Schlussfolgerungen}
 
 \noindent Die Mischkristalle $\text{Gd}\text{ScO}_3$ und $\text{Dy}\text{ScO}_3$ wurden mittels DTA erstmals hinsichtlich Schmelzpunkt und -wärme untersucht. Die gemessenen Schmelztemperaturen liegen im erwarteten Bereich zwischen 2100°C und 2200°C und
-sind im Rahmen der Ungenauigkeit mit dem verwendeten Modell der idealen Mischbarkeit von Phasen vereinbar. Diese, auch auf Grundlage älterer Messungen getroffene, Annahme der idealen Mischbarkeit von $\text{TbGdScO}_3$ und $\text{DyTbScO}_3$ in der
-festen und flüssigen Phase scheint plausibel. Es liegt daher die Vermutung nahe, dass auch die Züchtung anderer $\ch{^{x}RE^{y}REScO_3}$-Mischkristalle zur stetigen Anpassung der Gitterkonstanten/Schmelztemperaturen möglich ist.
+sind im Rahmen der Ungenauigkeit mit dem verwendeten Modell der idealen Mischbarkeit von Phasen vereinbar. Die Plausibilität der Annahme der idealen Mischbarkeit von $\text{TbGdScO}_3$ und $\text{DyTbScO}_3$ in der
+festen und flüssigen Phase wird durch ältere Messungen (an $\text{GdScO}_3$ und $\text{DyScO}_3$) und der vermuteteten strengen Monotonie der $T_S$-x-Kurve (für $\text{RE}_{x}\text{RE}_{1-x}\text{ScO}_3$) gestützt.
+Es liegt daher die Vermutung nahe, dass auch die Züchtung anderer $\ch{^{x}RE^{y}REScO_3}$-Mischkristalle zur stetigen Anpassung der Gitterkonstanten/Schmelztemperaturen möglich ist.
 Eine Variation der Zusammensetzung der untersuchten Substrate (z.B. $\text{Dy}_{x}\text{Tb}_{1-x}\text{ScO}_3$) würde genauere Aussagen zur idealen Mischbarkeit, sowie zu den konzentrationsabhängigen Schmelzpunkten und -wärmen ermöglichen.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
