--- a/Protokoll/phasendiagramme.tex
+++ b/Protokoll/phasendiagramme.tex
@@ -118,14 +118,14 @@ Es ergeben sich folgende Werte:
 \begin{tabular}{ccccc}
  Substanz & $T_S$ (°C) & $T_{S,ref}$ (°C) & $Q_S$ (kJ/mol) & $Q_{S,ref}$ (kJ/mol)\\
 \hline
-  \textbf{$\text{TbGdScO}_3$}  & \textbf{2149} & -    & \textbf{142} & -  \\
-  $\text{GdScO}_3$    & 2141 & 2150 \cite{paperK} & 83  & 85 \\
-  \textbf{$\text{DyTbScO}_3$}  & \textbf{2114} & -    & \textbf{163} & -  \\
-  $\text{DyScO}_3$    & 2185 & 2060 \cite{meltpDyScO3} & 98  & - \\
+  \textbf{$\text{TbGdScO}_3$}  & \textbf{2149} & -      & $\mathbf{142\pm 28}$  & -  \\
+  $\text{GdScO}_3$    & 2141 & 2150 \cite{paperK}       & $83\pm 17$   & 85 \\
+  \textbf{$\text{DyTbScO}_3$}  & \textbf{2114} & -      & $\mathbf{163\pm 33}$  & -  \\
+  $\text{DyScO}_3$    & 2185 & 2060 \cite{meltpDyScO3}  & $98\pm 20$   & - \\
 \end{tabular}
 \end{ruledtabular}
 \caption{\label{tab:erg} Messergebnisse für Schmelztemperatur $T_S$ und -wärme $Q_S$ der verschiedenen Mischkristalle. Fett markiert ist die Messreihe dieses Versuchs.
-Alle anderen Messungen sind vom 17.06.2010 und dienen dem Vergleich. Unsicherheiten: $\Delta T_S=20\text{ K}$, $\Delta Q_S=0,2\cdot Q_S$ }
+Alle anderen Messungen sind vom 17.06.2010 und dienen dem Vergleich. Unsicherheit $\Delta T_S=20\text{ K}$, $\Delta Q_S=0,2\cdot Q_S$ }
 \end{table}
 
 \iffalse
